:recycle: Fix overlap when blockquote oblique

--- a/app/assets/stylesheets/common/articles.scss
+++ b/app/assets/stylesheets/common/articles.scss
@@ -435,6 +435,7 @@ $rule-margin-left-and-right: 1.3rem;
   }
 
   blockquote {
+    font-family: Helvetica, メイリオ, Meiryo, 'ヒラギノ角ゴ ProN W3', 'Hiragino Kaku Gothic ProN';
     color: #555;
     font-style: oblique;
     border-left: solid 4px #ddd;
